fixed a blink on the project scroll animation on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,13 @@ body {
   }
 }
 
+/* This Block Stops a Blink On The Infinite Scroll*/
+/* Going to be real with you I have no idea why */
+.animate-infinite-scroll * {
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+}
+
 .animate-infinite-scroll {
   animation: infinite-scroll 10s linear infinite;
   --gap: 2rem;
